Fix sidebar header visibility b/w switching communities (#5573)
* Fix sidebar header visibility b/w switching communities

* Fix lint

--- a/packages/commonwealth/client/styles/components/component_kit/CWSidebarHeader/CWSidebarHeader.scss
+++ b/packages/commonwealth/client/styles/components/component_kit/CWSidebarHeader/CWSidebarHeader.scss
@@ -14,5 +14,7 @@
 
   .header {
     padding: 0px 8px 0px 12px;
+    display: block;
+    width: 100%;
   }
 }
